--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
  <!DOCTYPE html>
 <html>
+<head>
 <title>Koputertaal</title>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-11419816-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-11419816-3');
+</script>
+
+</head>
 <body>
 
 <h1>Koputertaal - de taal voor echte Koputeraars.</h1>
