--- a/index.html
+++ b/index.html
@@ -18,5 +18,33 @@
 <h1>Koputertaal - de taal voor echte Koputeraars.</h1>
 <p>Ik heb een code in het moederbord gecomputerd</p>
 
+<ul>
+	<li>Groeperen is een soort mening - Joey B.</li>
+	<li>Standaard is ie gewoon normaal - Erik H.</li> 
+	<li>Dat is geen impedement dat is gewoon onkunde - Arnoud dan A</li> 
+	<li>Alles is weggooi code, als je het maar lang genoeg bekijkt - Joey B.</li> 
+	<li>Dat is een avontuur op zichzelf - Kees S.</li>
+	<li>Hij kwam gedeeltelijk in paniek naar mij toe - Joey B.</li> 
+	<li>Een federatie trajecttje - Jeroen Q</li> 
+	<li>Defaciliteren - Mark M.</li>
+	<li>Paniek statement - Berend H.</li> 
+	<li>Ik heb het probleem conceptueel opgelost - Jeroen Q.</li> 
+	<li>Wij zijn de opslaande factor - Berend H.</li>
+	<li>Het is zo complex dat het niet meer moeilijk is - Martijn van der P.</li> 
+	<li>Zo hoog mogelijk in de boom escaleren - M.</li>
+	<li>Gisteren was het op dit moment al 12 uur - Mark M.</li> 
+	<li>Als ik vakantie ben ik weg - Mark M.</li>
+	<li>Ik wil bij elke build een rariteitenkabinet op tuigen - Michiel van S.</li> 
+	<li>De wet van behoud van elende - Luuk S.</li>
+	<li>Toetsenbord is key- Joey B.</li>
+	<li>Gratis verrast door niks te krijgen - Martijn van der P.</li>
+	<li>De API is wel af maar nog niet compleet - Luuk S.</li>
+	<li>Ik wil je het leven lastig maken - Jeroen Q</li>
+	<li>Als je f5 maar vaak genoeg indruk, wordt het vanzelf bijzonder - Marten H.</li> 
+	<li>Je bent nooit te dom om te leren - Luuk S.</li>
+	<li>Leesbare code is echt een gave - Bas van der M.</li> 
+	<li>Deepak is my spirit animal - Franco B.</li>
+</ul>
+
 </body>
 </html> 
