--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 	<li>Je bent nooit te dom om te leren - Luuk S.</li>
 	<li>Leesbare code is echt een gave - Bas van der M.</li> 
 	<li>Deepak is my spirit animal - Franco B.</li>
+	<li>Recruiter" en "lezen" is grammaticaal onmogelijk in een zin zonder een ontkenning ertussen. - Johan den H.</li>
 </ul>
 
 </body>
