Add new briljant quote by Joey B.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 	<li>Leesbare code is echt een gave - Bas van der M.</li> 
 	<li>Deepak is my spirit animal - Franco B.</li>
 	<li>"Recruiter" en "lezen" is grammaticaal onmogelijk in een zin zonder een ontkenning ertussen. - Johan den H.</li>
+	<li>Dit [Een paashaas vega frikandel hapje] is toch wel de klok widget van de vegan hapjes. - Joey B.</li>
 </ul>
 
 </body>
