--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<li>Alles is weggooi code, als je het maar lang genoeg bekijkt - Joey B.</li> 
 	<li>Dat is een avontuur op zichzelf - Kees S.</li>
 	<li>Hij kwam gedeeltelijk in paniek naar mij toe - Joey B.</li> 
-	<li>Een federatie trajecttje - Jeroen Q</li> 
+	<li>Een federatie trajectje - Jeroen Q</li> 
 	<li>Defaciliteren - Mark M.</li>
 	<li>Paniek statement - Berend H.</li> 
 	<li>Ik heb het probleem conceptueel opgelost - Jeroen Q.</li> 
@@ -46,6 +46,7 @@
 	<li>Deepak is my spirit animal - Franco B.</li>
 	<li>"Recruiter" en "lezen" is grammaticaal onmogelijk in een zin zonder een ontkenning ertussen. - Johan den H.</li>
 	<li>Dit [Een paashaas vega frikandel hapje] is toch wel de klok widget van de vegan hapjes. - Joey B.</li>
+	<li>Ik kan overal mee werken, als het maar werkt. - Huub</li>
 </ul>
 
 </body>
