Quote van Sjoerd

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 	<li>"Recruiter" en "lezen" is grammaticaal onmogelijk in een zin zonder een ontkenning ertussen. - Johan den H.</li>
 	<li>Dit [Een paashaas vega frikandel hapje] is toch wel de klok widget van de vegan hapjes. - Joey B.</li>
 	<li>Ik kan overal mee werken, als het maar werkt. - Huub</li>
+	<li>Performance zit in je vingers, niet in je computer. - Sjoerd</li>
 </ul>
 
 </body>
