--- a/index.html
+++ b/index.html
@@ -3,33 +3,24 @@
 <head>
 <title>Koputertaal</title>
 <style>
-body {
-  max-width: 650px;
-  margin: 40px auto;
-  padding: 0 10px;
-  font: 18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  color: #444;
+@media (prefers-color-scheme: dark){
+	body {
+		background:#000
+	}
 }
-
-h1,
-h2,
-h3 {
-  line-height: 1.2;
+body{
+	margin:1em auto;
+	max-width:40em;
+	padding:0 .62em 3.24em;
+	font:1.2em/1.62 sans-serif
 }
-
-@media (prefers-color-scheme: dark) {
-  body {
-    color: #c9d1d9;
-    background: #0d1117;
-  }
-
-  a:link {
-    color: #58a6ff;
-  }
-
-  a:visited {
-    color: #8e96f0;
-  }
+h1,h2,h3 {
+	line-height:1.2
+}
+@media print{
+	body{
+		max-width:none
+	}
 }
 </style>
 </head>
