--- a/index.html
+++ b/index.html
@@ -3,31 +3,32 @@
 <head>
 <title>Koputertaal</title>
 <style>
-@media (prefers-color-scheme: dark){
-	body {
-		background:#000
-	}
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+  line-height: 1.6;
+  color: #222;
+  max-width: 40rem;
+  padding: 1rem;
+  margin: auto;
+  background: #fafafa;
 }
-body{
-	margin:1em auto;
-	max-width:40em;
-	padding:0 .62em 3.24em;
-	font:1.2em/1.62 sans-serif
+img {
+  max-width: 100%;
 }
-h1,h2,h3 {
-	line-height:1.2
+a {
+  color: #2ECC40;
 }
-@media print{
-	body{
-		max-width:none
-	}
+h1, h2, strong {
+  color: #111;
+  margin-bottom: 0;
 }
 </style>
 </head>
 <body>
 
-<h1>Koputertaal - de taal voor echte Koputeraars.</h1>
-<p>Ik heb een code in het moederbord gecomputerd</p>
+<h1>Koputertaal</h1>
+<em>de taal voor echte Koputeraars</em>
+<h2>Ik heb een code in het moederbord gecomputerd</h2>
 
 <ul>
 	<li>Groeperen is een soort mening - Joey B.</li>
